main/linux-*: remove redundant override of HOSTCC
apkbuild-lint complains about the use of HOSTCC in APKBUILDs:

IC:[AL6]:main/linux-lts/APKBUILD:66:prefix custom variable with _: HOSTCC="${CC:-gcc}"
IC:[AL6]:main/linux-lts/APKBUILD:67:prefix custom variable with _: HOSTCC="${HOSTCC#${CROSS_COMPILE}}"
MC:[AL31]:main/linux-lts/APKBUILD:66:variables must not have capital letters
MC:[AL31]:main/linux-lts/APKBUILD:67:variables must not have capital letters

The first two were fixed in https://gitlab.alpinelinux.org/Leo/atools/merge_requests/24.
But apkbuild-lint still complains about the capitalized variable.
Adding an exception for this in atools seems quite complicated.

It turns out overriding HOSTCC in the linux-* APKBUILD is actually
no longer necessary. abuild automatically sets HOSTCC correctly now
when cross compiling, and the APKBUILD will just set the same value again.
(see https://gitlab.alpinelinux.org/alpine/abuild/commit/9be173c6774fbec6cf8acd573faa039dd4129fc6)

We can just remove HOSTCC from the APKBUILD.
linux-lts still builds fine when cross compiling for aarch64 using bootstrap.sh.

--- a/main/linux-lts/APKBUILD
+++ b/main/linux-lts/APKBUILD
@@ -63,9 +63,6 @@ ppc*) _carch="powerpc" ;;
 s390*) _carch="s390" ;;
 esac
 
-HOSTCC="${CC:-gcc}"
-HOSTCC="${HOSTCC#${CROSS_COMPILE}}"
-
 prepare() {
 	local _patch_failed=
 	cd "$srcdir"/linux-$_kernver
@@ -109,7 +106,7 @@ oldconfig() {
 		cp "$srcdir"/$_config "$_builddir"/.config
 		make -C "$srcdir"/linux-$_kernver \
 			O="$_builddir" \
-			ARCH="$_carch" HOSTCC="$HOSTCC" \
+			ARCH="$_carch" \
 			listnewconfig oldconfig
 	done
 }
@@ -191,7 +188,7 @@ _dev() {
 	cp "$srcdir"/config-$_flavor.${CARCH} "$dir"/.config
 	echo "-$pkgrel-$_flavor" > "$dir"/localversion-alpine
 
-	make -j1 -C "$srcdir"/linux-$_kernver O="$dir" ARCH="$_carch" HOSTCC="$HOSTCC" \
+	make -j1 -C "$srcdir"/linux-$_kernver O="$dir" ARCH="$_carch" \
 		syncconfig prepare modules_prepare scripts
 
 	# remove the stuff that points to real sources. we want 3rd party
