--- a/main/linux-rpi/APKBUILD
+++ b/main/linux-rpi/APKBUILD
@@ -52,9 +52,6 @@ case "$CARCH" in
 	arm*) _carch="arm" ;;
 esac
 
-HOSTCC="${CC:-gcc}"
-HOSTCC="${HOSTCC#${CROSS_COMPILE}}"
-
 prepare() {
 	local _patch_failed=
 	cd "$srcdir"/linux-$_kernver
@@ -94,7 +91,6 @@ prepare() {
 		make -C "$srcdir"/linux-$_kernver \
 			O="$builddir" \
 			ARCH="$_carch" \
-			HOSTCC="$HOSTCC" \
 			olddefconfig
 		_verifyconfig $flavor
 	done
@@ -271,7 +267,7 @@ _dev() {
 	# external modules, and create the scripts
 	mkdir -p "$dir"
 	cp "$srcdir"/build-$_flavor/.config "$dir"/.config
-	make -j1 -C "$srcdir"/linux-$_kernver O="$dir" HOSTCC="${CC:-gcc}" \
+	make -j1 -C "$srcdir"/linux-$_kernver O="$dir" \
 		syncconfig prepare modules_prepare scripts
 
 	# remove the stuff that points to real sources. we want 3rd party
