community/yarn: upgrade to 1.22.0

--- a/community/yarn/APKBUILD
+++ b/community/yarn/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Ed Robinson <ed@reevoo.com>
 # Maintainer: Ed Robinson <ed@reevoo.com>
 pkgname=yarn
-pkgver=1.21.1
+pkgver=1.22.0
 pkgrel=0
 pkgdesc="Fast, reliable, and secure dependency management for Node.js"
 url="https://yarnpkg.com/"
 arch="noarch"
 license="BSD-2-Clause"
 depends="nodejs"
-source="https://yarnpkg.com/downloads/$pkgver/$pkgname-v$pkgver.tar.gz
+source="https://yarnpkg.com/downloads/$pkgver/yarn-v$pkgver.tar.gz
 	apk-install-method.patch"
 builddir="$srcdir/$pkgname-v$pkgver"
 
@@ -30,5 +30,5 @@ package() {
 	ln -s /$destdir/bin/yarn "$pkgdir"/usr/bin/yarnpkg
 }
 
-sha512sums="75082626febbe97fcd41cce96e20ed73686c13fa69a460c9033c25462003313bc5cd86ddc4f8f658ee0f70dcab892b767388ec08ca6df14151287528ceddb519  yarn-v1.21.1.tar.gz
+sha512sums="28c1cffc9ab9de364a4d8f624d4b77748565fdb7ba50fb3620da3debe0676472cac583537f03269601d368c5b2199a0eef8448e00205be75a162b5ead9448992  yarn-v1.22.0.tar.gz
 30431f7aa5fe7382e062b92e413ea8d118e157d89aa043353c18ff7d1721d0e3ecfbe68de1f0058b3b70cee5cf9baa08d28f1718beb5d14fcb0cf2881dff1eac  apk-install-method.patch"
