main/gpsd: upgrade to 3.20
Specifically disable dbus and systemd options

--- a/main/gpsd/APKBUILD
+++ b/main/gpsd/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Nathan Angelacos <nangel@alpinelinux.org>
 # Maintainer: Nathan Angelacos <nangel@alpinelinux.org>
 pkgname=gpsd
-pkgver=3.19
-pkgrel=1
+pkgver=3.20
+pkgrel=0
 pkgdesc="A GPS daemon"
 arch=all
 url="http://catb.org/gpsd/"
@@ -13,7 +13,6 @@ source="https://download-mirror.savannah.gnu.org/releases/gpsd/$pkgname-$pkgver.
 	timepps.h
 	gpsd-use-local-timepps-header.patch
 	0001-workaround-for-scons-using-python2.patch
-	ttydefaults.patch
 	gpsd.initd
 	gpsd.confd"
 
@@ -32,10 +31,12 @@ prepare() {
 
 build() {
 	cd "$builddir"
-        CPPFLAGS="-I. -DHAVE_SYS_TIMEPPS_H"
+	CPPFLAGS="-I. -DHAVE_SYS_TIMEPPS_H"
 	scons -j${JOBS:-1} \
 		prefix=/usr \
-		target_python=python3
+		target_python=python3 \
+		dbus_export=no \
+		systemd=no
 }
 
 check() {
@@ -76,10 +77,9 @@ _clients() {
 	mv "$pkgdir"/usr/bin/* "$subpkgdir"/usr/bin
 }
 
-sha512sums="c9f9a9ff65759f852771ec4cf97ab15343c9176a149dd5ea6c2e2dc18b47aa7c7bf9ff1f2e8523121564d33a34ae6aa08169c5454847b4fe7848e616fd20a814  gpsd-3.19.tar.gz
+sha512sums="557ef5e5f3b511da4fc441f4bb2e0cd2e23c2981e8b3ce2999973767a04fde070d3ec6f14af60d0e471320078e9f4d1144e5796e7927975ecfbd55fc97f470a9  gpsd-3.20.tar.gz
 eb11fc19243d1789016d88eb7645bfe67c46304547781489bf36eb1dd4c252d523681ff835a6488fa0ef62b6b9e2f781c672279f4439f5d5640a3f214a113048  timepps.h
-b918e4b32a6e8bcd25d126e4f1a78dfdda30837a64e7d829f04b27e138843a1dbec83e64677edd6f88eca8cead511949ee664066de4429641ba248fe5a7768ef  gpsd-use-local-timepps-header.patch
-a0ec09823247def7b7cc5cdcc123d1ee8d5ab923b1cf7e400b6b8c35b8315e82c70f4d197dab0f3d3cba979c71c20a989617b3ca0725d4f8fa7c99c02f36ca0c  0001-workaround-for-scons-using-python2.patch
-e2af8f52fc2d7e663882b6d12c5f4d709aa267b16eb9aeca2a70d8ecc681ae72359f3efcd1636cde576bc8579e008f242574bc0adfab7252d3e763f039e86135  ttydefaults.patch
+b692c9fc77a9db3fc621693d3b9e3ef9bc2efbbc7b01651168d7b928d29d48a489b8859930bad01b6021e211372e069a726b78dd5938385ed4ae0153b38f4170  gpsd-use-local-timepps-header.patch
+6599951b4df6154de0bc1088f1bc740af68e2b5a1e3ea2b422a406ed54a79d4273a5015e5e4efdf832c8926cb50626fc7fe8be361448128cc63c41b0f8359a70  0001-workaround-for-scons-using-python2.patch
 51319247eb78c3021d3eb897cb5d6026cc09d46a532a245a835459ed525947ffb6239f08126dd7e344de52e3b0387226bce060191ec3f14f99fc9f255d96f8ea  gpsd.initd
 75dbfe39eb900cc9587dd70794ee77ae2230765bbede47760ca227145aa3f2290b6995335ffcfeae6cd86f56b01ca87367548f4fbcf810aff1bc012b7416deef  gpsd.confd"
