community/salt: add secfixes

--- a/community/salt/APKBUILD
+++ b/community/salt/APKBUILD
@@ -32,6 +32,10 @@ source="https://pypi.io/packages/source/s/salt/salt-$pkgver.tar.gz
 	"
 options="!check" # depends on pytestsalt
 
+# secfixes:
+#   2019.2.3-r0:
+#     - CVE-2019-17361
+
 prepare() {
 	default_prepare
 
