main/perl-cpanel-json-xs: upgrade to 4.19

--- a/main/perl-cpanel-json-xs/APKBUILD
+++ b/main/perl-cpanel-json-xs/APKBUILD
@@ -2,40 +2,35 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-cpanel-json-xs
 _pkgreal=Cpanel-JSON-XS
-pkgver=4.18
+pkgver=4.19
 pkgrel=0
 pkgdesc="JSON::XS for Cpanel, fast and correct serialising, also for 5.6.2"
 url="https://metacpan.org/release/Cpanel-JSON-XS"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpanmakedepends="perl-json perl-test-leaktrace"
 depends="perl"
-makedepends="perl-dev $cpanmakedepends"
+makedepends="perl-dev perl-json perl-test-leaktrace"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RU/RURBAN/Cpanel-JSON-XS-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 prepare() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="3a86b948e6fac25376382da5b8acf70db9ce3eff14c3cd6fbd8f018dd04102135ae799c39dc06bca3cb21201944462fe62e44ae5ebd3d03838ebdaae576890de  Cpanel-JSON-XS-4.18.tar.gz"
+sha512sums="c67b62e8f95900cb3626357cfa9976f1553f84ffd10a977d47839ca3b317014473c3a6e48f6680478b89bbdc2ac177b22441ad5e49e7e8eb0344ef14a3c52b10  Cpanel-JSON-XS-4.19.tar.gz"
