community/py3-dialog: upgrade to 3.5.1

--- a/community/py3-dialog/APKBUILD
+++ b/community/py3-dialog/APKBUILD
@@ -1,30 +1,27 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=py3-dialog
-pkgver=3.4.0
-pkgrel=3
+pkgver=3.5.1
+pkgrel=0
 pkgdesc="A Python3 interface to the UNIX dialog utility and mostly-compatible programs"
 url="http://pythondialog.sourceforge.net/"
 arch="noarch"
-license="LGPL"
+license="LGPL-2.1-only"
 depends="dialog"
 makedepends="python3-dev binutils"
-source="https://downloads.sourceforge.net/project/pythondialog/pythondialog/${pkgver}/python3-pythondialog-${pkgver}.tar.bz2"
+source="https://downloads.sourceforge.net/project/pythondialog/pythondialog/$pkgver/python3-pythondialog-$pkgver.tar.bz2"
 builddir="$srcdir"/pythondialog-$pkgver
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py check
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="a810128459133c4e416f4b04b8dd98b2230f046b8762e6b29c4e02e1458fa96029d37137a71cc01aee292106867a6f30026941ed1f727b7e48cbe976d96d7ed4  python3-pythondialog-3.4.0.tar.bz2"
+sha512sums="f032e425ce1ebac53ade1401e48625b5869497367f788831d08fd22eb3b3b14fa5aebd26fd3681b47222ef0247ebb5c1ead127f111ca296197e258650dd675ad  python3-pythondialog-3.5.1.tar.bz2"
