main/http-parser: upgrade to 2.9.3

--- a/main/http-parser/APKBUILD
+++ b/main/http-parser/APKBUILD
@@ -1,33 +1,27 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=http-parser
-pkgver=2.9.2
+pkgver=2.9.3
 pkgrel=0
 pkgdesc="HTTP request/response parser for C"
 url="https://github.com/nodejs/http-parser"
 arch="all"
 license="MIT"
-depends=""
-makedepends=""
 subpackages="$pkgname-dev"
 # Note: All the patches are copied from Gentoo ebuild.
 # upstream: https://github.com/nodejs/http-parser/pull/272
-source="$pkgname-$pkgver.tar.gz::https://github.com/nodejs/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/nodejs/http-parser/archive/v$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	make library
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make install DESTDIR="$pkgdir" PREFIX="/usr"
 }
 
-sha512sums="fe21ba46c9297b55a6382497b689da2af88999a9a5716ffef0731057ce1bb053056e4f20147284c78338e48ed1a793a0270fe0edfe3f4b589926e3ede603d023  http-parser-2.9.2.tar.gz"
+sha512sums="d200c52f594192ba80a8d5b59d414404843f8601dac647f29c27845db75ac1f015789031e30e91aaab5b553af1ee6af50b90f9342a444c10c1027e10fdb9a31b  http-parser-2.9.3.tar.gz"
