--- a/community/docker-py/APKBUILD
+++ b/community/docker-py/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=docker-py
-pkgver=4.1.0
-pkgrel=3
+pkgver=4.2.0
+pkgrel=0
 pkgdesc="Python library for the Docker Engine API"
 url="https://github.com/dotcloud/docker-py"
 arch="noarch"
@@ -10,21 +10,18 @@ license="Apache-2.0"
 depends="dockerpy-creds py3-cparser py3-cryptography py3-ipaddress
 	py3-packaging py3-parsing py3-requests py3-websocket-client"
 makedepends="py3-flake8 py3-mock py3-setuptools py3-six python3-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/docker/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/docker/docker-py/archive/$pkgver.tar.gz"
 
 check() {
-	cd "$builddir"
 	python3 setup.py check
 }
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="25e236bd5b429846ed45f26a303af02bb679c526f45f188d8df74d79fcab116b41e52e3a85642babff94127ae977dab6cc93e53bb78aab7be038190e161d25be  docker-py-4.1.0.tar.gz"
+sha512sums="df5a450355f11d580568ebb0e80abc967df35f2ae10ce83c4ece85e4cf3e97d9cd15e5f14a2d9a43650a844d9402a8d97370f6e5f615c186b12968379e52fa38  docker-py-4.2.0.tar.gz"
