main/ppp: change url to https://ppp.samba.org/

--- a/main/ppp/APKBUILD
+++ b/main/ppp/APKBUILD
@@ -3,7 +3,7 @@ pkgname=ppp
 pkgver=2.4.8
 pkgrel=0
 pkgdesc="A daemon which implements the PPP protocol for dial-up networking"
-url="http://www.samba.org/ppp/"
+url="https://ppp.samba.org/"
 arch="all"
 license="BSD and LGPL-2.0-or-later and GPL-2.0-or-later and Public-Domain"
 makedepends="bsd-compat-headers linux-headers"
