main/ppp: cleanup APKBUILD and modernize

--- a/main/ppp/APKBUILD
+++ b/main/ppp/APKBUILD
@@ -33,7 +33,7 @@ source="https://github.com/paulusmack/ppp/archive/ppp-$pkgver.tar.gz
 
 builddir="$srcdir"/$pkgname-$pkgname-$pkgver
 
-build () {
+build() {
 
 	# fix CFLAGS
 	# -D_GNU_SOURCE is needed for IPv6 to work apparently
@@ -55,15 +55,14 @@ build () {
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--localstatedir=/var \
-		|| return 1
-	make COPTS="$CFLAGS" || return 1
+		--localstatedir=/var
+	make COPTS="$CFLAGS"
 }
 
 package() {
-	make INSTROOT="$pkgdir" install || return 1
+	make INSTROOT="$pkgdir" install
 	install -Dm644 include/net/ppp_defs.h \
-		"$pkgdir"/usr/include/net/ppp_defs.h || return 1
+		"$pkgdir"/usr/include/net/ppp_defs.h
 	install -D -m755 "$srcdir"/ip-up "$pkgdir"/etc/ppp/ip-up
 	install -D -m755 "$srcdir"/ip-down "$pkgdir"/etc/ppp/ip-down
 	install -D -m755 "$srcdir"/pppd.initd "$pkgdir"/etc/init.d/pppd
@@ -73,8 +72,8 @@ package() {
 
 	# busybox ifup/ifdown needs pon/poff
 	install -D -m644 scripts/pon.1 "$pkgdir"/usr/share/man/man1/pon.1
-	install -D -m755 scripts/pon "$pkgdir"/usr/bin/pon || return 1
-	install -D -m755 scripts/poff "$pkgdir"/usr/bin/poff || return 1
+	install -D -m755 scripts/pon "$pkgdir"/usr/bin/pon
+	install -D -m755 scripts/poff "$pkgdir"/usr/bin/poff
 
 	install -d "$pkgdir"/usr/share/doc/ppp
 	for i in scripts/*; do
@@ -82,7 +81,7 @@ package() {
 		pon|poff|*.1) continue;
 		esac
 		if [ -f "$i" ]; then
-			cp $i "$pkgdir"/usr/share/doc/ppp/ || return 1
+			cp $i "$pkgdir"/usr/share/doc/ppp/
 		fi
 	done
 	install -d "$pkgdir"/etc/ppp/peers
@@ -161,7 +160,7 @@ daemon() {
 	pkgdesc="A daemon which implements the PPP protocol"
 	depends=
 	mkdir -p "$subpkgdir"
-	mv "$pkgdir"/* "$subpkgdir"/ || return 1
+	mv "$pkgdir"/* "$subpkgdir"/
 }
 
 sha512sums="a99b3b6c7bd80cd133bda4e29d33c793a76f3b67e1f8db774547e88932ce29564fad390a4f51d3fe30a75e006499b95000b042ae0f64cd360548426f8091a478  ppp-2.4.8.tar.gz
