--- a/main/nodejs/APKBUILD
+++ b/main/nodejs/APKBUILD
@@ -6,6 +6,10 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 #
 # secfixes:
+#   12.15.0-r0:
+#     - CVE-2019-15606
+#     - CVE-2019-15605
+#     - CVE-2019-15604
 #   10.16.3-r0:
 #     - CVE-2019-9511
 #     - CVE-2019-9512
@@ -44,7 +48,7 @@
 pkgname=nodejs
 # Note: Update only to even-numbered versions (e.g. 6.y.z, 8.y.z)!
 # Odd-numbered versions are supported only for 9 months by upstream.
-pkgver=12.14.0
+pkgver=12.15.0
 pkgrel=0
 pkgdesc="JavaScript runtime built on V8 engine - LTS version"
 url="https://nodejs.org/"
@@ -136,6 +140,6 @@ npm() {
 	mv "$pkgdir"/usr/lib/node_modules/npm "$subpkgdir"/usr/lib/node_modules/
 }
 
-sha512sums="9c5cccfdd4c264f5a3d6c60fc7ad035ab0067cceb409548203741db1472fefca1d41a0724302728875f600b753e6f2bfc1254a2bd41858974d4113648c4632af  node-v12.14.0.tar.gz
+sha512sums="b1c5412b27b85e286f7f5e6758f30659655f18570e9b114d6743cea98e902297f0bd591ffe36e2a4483a3b9e5138f5f82f5975131eaab72495a477f960b938e0  node-v12.15.0.tar.gz
 3c536776e2ecb5dc677bf711a09418085b3c5e931a6eaf647f47c28e194d5c6dec354d4e7a039a5805b30fc7e83140594851e18d9120f523eec2f93539eac4db  dont-run-gyp-files-for-bundled-deps.patch
 9f60928b53447f9590c7065bcdbdd4065d10a06e8451531615791a3bd7d14f9114807e5446e0ec00e2cb7a11a277050345e34636b199db2979d7f022b31ffde4  link-with-libatomic-on-mips32.patch"
