--- a/community/snooze/APKBUILD
+++ b/community/snooze/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=snooze
-pkgver=0.3
+pkgver=0.4
 pkgrel=0
 pkgdesc="Run a command at a particular time"
 url="https://github.com/leahneukirchen/snooze"
@@ -8,7 +8,7 @@ options="!check" # Provides no testsuite
 arch="all"
 license="CC0-1.0"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/leahneukirchen/snooze/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/leahneukirchen/snooze/archive/v$pkgver.tar.gz"
 
 build() {
 	make
@@ -18,4 +18,4 @@ package() {
 	make DESTDIR="$pkgdir" PREFIX=/usr install
 }
 
-sha512sums="ca6e22fdf7af399f698b1c47ad7d204dde69339300d13bc76cedb4cc18a535f7c463bac883adf2331062e79ebfc450c703d5d1e6fbfce84e985470967655ad16  snooze-0.3.tar.gz"
+sha512sums="3487857892b6add1b75106e3c9d1b26b5085dfd21e959a11e82b989fe4aad05f98b45d75bfa65dc4e9d0ca7dbb9f7ef82373c2252ec36623fe84bce269dd2764  snooze-0.4.tar.gz"
