main/nodejs: fix man pages to have npm- prefix

--- a/main/nodejs/APKBUILD
+++ b/main/nodejs/APKBUILD
@@ -49,7 +49,7 @@ pkgname=nodejs
 # Note: Update only to even-numbered versions (e.g. 6.y.z, 8.y.z)!
 # Odd-numbered versions are supported only for 9 months by upstream.
 pkgver=12.15.0
-pkgrel=0
+pkgrel=1
 pkgdesc="JavaScript runtime built on V8 engine - LTS version"
 url="https://nodejs.org/"
 arch="all !mips64 !mips64el"
@@ -119,6 +119,14 @@ package() {
 	local d; for d in docs man; do
 		rm -r "$pkgdir"/usr/lib/node_modules/npm/$d
 	done
+
+	# XXX: Workaround for https://github.com/npm/cli/issues/780.
+	(cd "$pkgdir"/usr/share/man/man5 && find * \
+		-type f ! \( -name 'package-json.*' -or -name 'npmrc.*' -or -name 'npm-*' \) \
+		-exec mv {} npm-{} \;)
+	(cd "$pkgdir"/usr/share/man/man7 && find * \
+		-type f ! \( -name 'semver.*' -or -name 'npm-*' \) \
+		-exec mv {} npm-{} \;)
 }
 
 dev() {
