testing/fs-uae: upgrade to 3.0.2

--- a/testing/fs-uae/APKBUILD
+++ b/testing/fs-uae/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Taner Tas <taner76@gmail.com>
 pkgname=fs-uae
 # Remember to upgrade fs-uae-launcher to same version of fs-uae
-pkgver=3.0.0
+pkgver=3.0.2
 pkgrel=0
 pkgdesc="Amiga emulator."
 url="https://fs-uae.net/"
@@ -10,7 +10,7 @@ arch="all !armhf !armv7 !aarch64 !s390x"  # --enable-jit not supported for these
 license="GPL-2.0-only"
 makedepends="zip sdl2-dev libpng-dev libx11-dev libxi-dev openal-soft-dev linux-headers libmpeg2-dev glib-dev"
 subpackages="$pkgname-lang"
-source="https://fs-uae.net/stable/${pkgver}/${pkgname}-${pkgver}.tar.gz"
+source="https://fs-uae.net/stable/$pkgver/fs-uae-$pkgver.tar.gz"
 options="!check"
 
 build() {
@@ -24,7 +24,6 @@ build() {
 		;;
 	esac
 
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--prefix=/usr \
@@ -37,8 +36,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	rm -rf "$pkgdir"/usr/share/doc
 }
-sha512sums="3ceee2434b3aa3f545370a17149b3cda8d2eeb1bd093a45869a897a00b82ae4395efc52c129124e44262b47b7f56337e1adb9f58b0a1562efa73ee3ea3915b68  fs-uae-3.0.0.tar.gz"
+sha512sums="4727e61276e75e7b622b7c22b3991955efff0cf371215a0c72158d1f78e78dad7e82680865891ce015472606e8f55ed568c22a157760cc0779bef39aefc8c416  fs-uae-3.0.2.tar.gz"
