testing/fs-uae-launcher: upgrade to 3.0.2

--- a/testing/fs-uae-launcher/APKBUILD
+++ b/testing/fs-uae-launcher/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Taner Tas <taner76@gmail.com>
 pkgname=fs-uae-launcher
-pkgver=3.0.0
+pkgver=3.0.2
 pkgrel=0
 pkgdesc="FS-UAE emulator launcher."
 url="https://fs-uae.net/launcher"
@@ -9,7 +9,7 @@ license="GPL-2.0-only"
 depends="fs-uae~$pkgver py3-qt5 py3-sip-pyqt5"
 makedepends="py3-setuptools gettext"
 subpackages="$pkgname-lang"
-source="https://fs-uae.net/stable/$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://fs-uae.net/stable/$pkgver/fs-uae-launcher-$pkgver.tar.gz"
 options="!check"  # no testsuite
 
 package() {
@@ -25,4 +25,4 @@ package() {
 	rm -rf "$pkgdir"/usr/share/doc
 }
 
-sha512sums="76f9c48d2a46ece38aebb318a6d684ff40e85fef76bcc6ac57c7f397c828dae45541ba458a7792f102a8afc69a4183b9932b637318716a8b40ff3dbd3b37cad7  fs-uae-launcher-3.0.0.tar.gz"
+sha512sums="6e9d5588b4cee79b7d5468b7d5e3d6c82e54957fcb0b05d3e9d1da8710336f0af82821fea37ee4cf4e0dc12ead6096183fe488afe860ce11573fd828718ba3d3  fs-uae-launcher-3.0.2.tar.gz"
