--- a/testing/s3fs-fuse/APKBUILD
+++ b/testing/s3fs-fuse/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Steeve Chailloux <steeve.chailloux@orus.io>
 # Maintainer: Steeve Chailloux <steeve.chailloux@orus.io>
 pkgname=s3fs-fuse
-pkgver=1.85
+pkgver=1.86
 pkgrel=0
 pkgdesc="FUSE-based file system backed by Amazon S3"
 options="!check" # Fails to connect to localhost
@@ -12,7 +12,7 @@ depends="fuse"
 makedepends="automake autoconf libxml2-dev fuse-dev curl-dev git bash"
 checkdepends="coreutils sed"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/$pkgname/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/s3fs-fuse/s3fs-fuse/archive/v$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
@@ -38,4 +38,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="c99920bf1f1dc04a0ff89a71ad027a5b65d22d75a77f5c6dd4559eaa299af36c71d29b4bcf9fe7e473478e7da1d328c7cfcb1fb77d414b65a289f38456ce5d7a  s3fs-fuse-1.85.tar.gz"
+sha512sums="a4f79d9ae526427d5d41b5cd1519e4aac605e8bbd97079aec2a67562f0322fa5664d770d565aed4fca83ae254ab3c0454d25f4b86ec4d148a57c7745e07f5e14  s3fs-fuse-1.86.tar.gz"
