testing/rav1e: upgrade to 0.3.0
Ref https://github.com/xiph/rav1e/releases

--- a/testing/rav1e/APKBUILD
+++ b/testing/rav1e/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=rav1e
-pkgver=0.2.1
+pkgver=0.3.0
 pkgrel=0
 pkgdesc="The fastest and safest AV1 encoder"
 url="https://github.com/xiph/rav1e"
@@ -33,7 +33,8 @@ package() {
 	install -Dm 644 -t "$pkgdir/usr/share/doc/rav1e" README.md
 	install -Dm 644 -t "$pkgdir/usr/share/doc/rav1e" PATENTS
 
-	rm "$pkgdir/usr/.crates.toml"
+	rm "$pkgdir"/usr/.crates.toml
+	rm "$pkgdir"/usr/.crates2.json
 }
 
-sha512sums="0e20b45e424e6915e8ea383bb13764c2ca83ca7d5146f1ac46de8994e75a16cee1b21548ef5787460705928757ad83a3259a0c7fb62b51ffa68033f134cbd920  rav1e-0.2.1.tar.gz"
+sha512sums="64cfb5e091de25faf4281f060782a3c3d8cc7fb8df730286cf796fc3ee6e268b7f8db96d630a753a6ef7434528179c4b15d95534b140249ed39f0b9947dcb8df  rav1e-0.3.0.tar.gz"
