--- a/testing/libdap/APKBUILD
+++ b/testing/libdap/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Holger Jaekel <holger.jaekel@gmx.de>
 # Maintainer: Holger Jaekel <holger.jaekel@gmx.de>
 pkgname=libdap
-pkgver=3.20.4
-pkgrel=1
+pkgver=3.20.5
+pkgrel=0
 pkgdesc="The C++ DAP2 library from OPeNDAP"
 url="http://www.opendap.org/"
 arch="all"
@@ -29,7 +29,7 @@ subpackages="
 	$pkgname-dev
 	$pkgname-doc
 	"
-source="https://www.opendap.org/pub/source/$pkgname-$pkgver.tar.gz"
+source="https://www.opendap.org/pub/source/libdap-$pkgver.tar.gz"
 
 build() {
 	./configure --prefix=/usr \
@@ -52,4 +52,4 @@ package() {
 check() {
 	make check
 }
-sha512sums="0f3ce2299ef510ddcedfeaac4a0c71c632abedb96a1feabd4091f0b32f24835bffa8c7f39fdf5532a92985aada3596530e8f5a07600c7b7e128ffdecc290d5cb  libdap-3.20.4.tar.gz"
+sha512sums="727bf18bd8d8b296b2869622123de2c6b1d6fe7edba9f9aaacd06e9ba0e186703d83ada1d2a76482f322782245546710e0e04b2e2b59f705dc8d7df001fc24f7  libdap-3.20.5.tar.gz"
