main/mc: upgrade to 4.8.24

--- a/main/mc/APKBUILD
+++ b/main/mc/APKBUILD
@@ -1,22 +1,19 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mc
-pkgver=4.8.23
+pkgver=4.8.24
 pkgrel=0
 pkgdesc="Filemanager/shell that emulates Norton Commander"
 url="https://www.midnight-commander.org"
 arch="all"
 license="GPL-3.0-or-later"
-depends=""
 subpackages="$pkgname-doc $pkgname-lang"
 makedepends="e2fsprogs-dev glib-dev libssh2-dev ncurses-dev pcre-dev perl"
-source="https://www.midnight-commander.org/downloads/$pkgname-$pkgver.tar.xz
+source="https://www.midnight-commander.org/downloads/mc-$pkgver.tar.xz
 	alpine_syntax.patch"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,12 +36,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	rm -fr "$pkgdir"/usr/share/man/??
 }
@@ -68,5 +63,5 @@ lang() {
 		"$subpkgdir"/usr/share/mc/hints/
 }
 
-sha512sums="e51c7f926d296280a57a8ecb5f4b296a850022b7ab9beaba89f5cb7554d8fc3e13c73b8571f78c3162ee85df88f7f46d07c9c893156cda4d1377a01071cdd1c6  mc-4.8.23.tar.xz
+sha512sums="ec9e40198455e7001bb1d06ea060b9b4c32ad3a3750d0cc9bac334b53eb666df1746335bfcd411213fa4386b23e516f6026fe3d74ad9119b2340b26c63ccd4fc  mc-4.8.24.tar.xz
 47aa001e8c20a24631617d665fd0d81b269ebad96696c4bd70c7040bbca713868e02fe53dfaee9a775a57f35a0e7c9e44ce299037379e249ad27354a78d905c3  alpine_syntax.patch"
