community/xfdesktop: upgrade to 4.14.2

--- a/community/xfdesktop/APKBUILD
+++ b/community/xfdesktop/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfdesktop
-pkgver=4.14.1
+pkgver=4.14.2
 pkgrel=0
-pkgdesc="A desktop manager for Xfce"
+pkgdesc="Desktop manager for Xfce"
 url="https://xfce.org/"
 arch="all"
 license="GPL-2.0-or-later"
@@ -33,4 +33,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="05e8e79efe9683d46e69375eb5c3f1d923b5e875bc7dbb8f9405338e44ae0c48172af119c5e7b141595c38b8de00c58c21f7b7d218737f5ddc2428fd7aa4bc6c  xfdesktop-4.14.1.tar.bz2"
+sha512sums="8515fc1c048da50c8c2986ea8590144203fdf3107b81e2d2dd44ee408938fb71281abe52cc098508dc2ae20ef2cbc31903086941206c0cbbc92a661dbfb2c472  xfdesktop-4.14.2.tar.bz2"
