--- a/main/xrdp/APKBUILD
+++ b/main/xrdp/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=xrdp
-pkgver=0.9.11
+pkgver=0.9.12
 pkgrel=0
-pkgdesc="An open source RDP server"
+pkgdesc="Open source RDP server"
 url="https://www.xrdp.org/"
 arch="all"
 license="Apache-2.0"
@@ -22,7 +22,6 @@ build() {
 	if [ "$CARCH" = "x86" ]; then
 		_simd_opt="--without-simd"
 	fi
-	cd "$builddir"
 	./bootstrap
 	./configure \
 		--prefix=/usr \
@@ -38,7 +37,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	install -m755 -D "$srcdir"/$pkgname.initd \
@@ -46,6 +44,6 @@ package() {
 	ln -s $pkgname $pkgdir/etc/init.d/$pkgname-sesman
 }
 
-sha512sums="a025b504b8cc2c702514e200669a9d3952ccf22655036c088375d19b48581691d509d451050a5b72304134e1755c446d9a86a246ce760f9e797dc23d34158c45  xrdp-0.9.11.tar.gz
+sha512sums="c4052008c7574a91f702fa3c4a83c3b00011d2c5ff9d2c18cc09d72334635c4e990f08e67a6b2854a8616b60a287c294abd94551f004c4d5ebbfbf72933842a9  xrdp-0.9.12.tar.gz
 22b44398f4014ee67831051d1a1a859c6f4a601d75a03b33142ce7ea1e3f00082134337efb7da69e964f4a369d2b22114973221be2131f384f9459cc8e82fc13  xrdp.initd
 c20de35c4623bcdeae2ba8a740f965b5f320c506ff9a7b9444ec0c8300af518fd3a84b8c28f6e775b7bab73bdac7433be9261d133fc767d953ac54cb2d3b0afd  dynamic-link.patch"
