community/uacme: upgrade to 1.0.22

--- a/community/uacme/APKBUILD
+++ b/community/uacme/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Eivind Uggedal <eu@eju.no>
 # Maintainer: Eivind Uggedal <eu@eju.no>
 pkgname=uacme
-pkgver=1.0.20
-pkgrel=1
+pkgver=1.0.22
+pkgrel=0
 pkgdesc="Lightweight client for the RFC8555 ACMEv2 protocol"
 url="https://github.com/ndilieto/uacme"
 arch="all"
@@ -10,9 +10,7 @@ license="GPL-3.0-or-later ISC MIT"
 makedepends="openssl-dev curl-dev asciidoc"
 subpackages="$pkgname-doc"
 options="!check"  # no test suite
-source="uacme-$pkgver.tar.gz::https://github.com/ndilieto/uacme/archive/v$pkgver.tar.gz
-	fix-uacme.sh.patch
-	"
+source="uacme-$pkgver.tar.gz::https://github.com/ndilieto/uacme/archive/v$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -31,5 +29,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="ef93a6fc49c8761cacdd306acda1162281d603efe6970c634d1b92d2a672cc9e8302913e016a99bd7b81972ad8b40776e579dd6da9f7be97d840f2b2de61d866  uacme-1.0.20.tar.gz
-fec5195296cbd0780987f9768ba3db2acb1c0622a2d801a58f254d4aca39cd39a0be1ac9d4b21757b076a62934bcb4c9f00aa8c2406569fd4efe8aeb253ec28c  fix-uacme.sh.patch"
+sha512sums="6aa1abb6f887e6c6686a7d3c00ac80ff8a34034ee8e818d338d4d2daa810fba3045d0b1f840004b24c3a214e6541018b6520a16d5ada655c9c867c23890336c4  uacme-1.0.22.tar.gz"
