community/fio: upgrade to 3.18

--- a/community/fio/APKBUILD
+++ b/community/fio/APKBUILD
@@ -1,9 +1,10 @@
 # Contributor: wener <wenermail@gmail.com>
 # Maintainer: wener <wenermail@gmail.com>
 pkgname=fio
-pkgver=3.17
-pkgrel=1
+pkgver=3.18
+pkgrel=0
 pkgdesc="Flexible I/O Tester"
+options="!check" # Tests break due to missing drand_r
 url="https://github.com/axboe/fio"
 arch="all"
 license="GPL-2.0-only"
@@ -19,7 +20,7 @@ esac
 
 build() {
 	./configure --prefix=/usr
-	make
+	make T_TEST_PROGS=
 }
 
 check() {
@@ -36,4 +37,4 @@ package() {
 	done
 }
 
-sha512sums="566cb2a2cecbdbed01332e4d2ecf0b3c81e09af147f64876c7ea53d0f62e9765a3026e670fd931f275a47da15ca58997d006e2830099056ac0c5163543b23cd0  fio-3.17.tar.gz"
+sha512sums="bb1c878560508b6eae806d6f7f06fec0249684957c299f1e258c464d36c6b015a982d492abe2e5d1a18959ac66f6f37472a1e1cf0ed94f12ddfc19ebd07efd90  fio-3.18.tar.gz"
