testing/podman: upgrade to 1.8.0

--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
-pkgver=1.7.0
-pkgrel=3
+pkgver=1.8.0
+pkgrel=0
 pkgdesc="Simple management tool for pods, containers, and images"
 url="https://podman.io/"
 options="!check" # TODO: enable tests
 arch="all"
 license="Apache-2.0"
-depends="conmon cni-plugins runc iptables ip6tables"
+depends="conmon cni-plugins runc iptables ip6tables slirp4netns"
 makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev bash"
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
@@ -18,12 +18,11 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$
 builddir="$srcdir/libpod-$pkgver"
 
 build() {
-	unset LDFLAGS
+	export BUILDTAGS="exclude_graphdriver_devicemapper seccomp"
 	make podman PREFIX=/usr
 }
 
 package() {
-	unset LDFLAGS
 	make install.bin install.man install.cni install.config \
 		PREFIX=/usr DESTDIR="$pkgdir"
 }
@@ -46,5 +45,5 @@ zshcomp() {
 		"$subpkgdir"/usr/share/zsh/site-functions/_$pkgname
 }
 
-sha512sums="986ec7123127d3ffb26cecc39a2ae3d8a6dd3d147327449fc4e9d17f6e6606bde278f13920d0aef59410262801251e7b4cfe099cb5caafe9773533e8476848fe  podman-1.7.0.tar.gz
+sha512sums="8e46633742e7dda1b9f6b641051009485331a3a95fcc8ff4c59c46a66f86ce1b79c832c5775d825aa54b885edaf533be2f864257137277a5265509026d0a8b87  podman-1.8.0.tar.gz
 fb0997502e996ed0b1e99b11970380d4e7a61ab1aa0bf54ec925edd7defbbe2fec67f4cb28ab4a6f0de4ba770ca11c952893a35a0c71f10bd2c3d19f3c836803  libpod-config.patch"
