main/gcc: fix cross-compiler so script generation
The quoting was converted incorrectly and produced invalid files.

Fixes: bcca4ab2 "main/gcc: Fix most linting issues"

--- a/main/gcc/APKBUILD
+++ b/main/gcc/APKBUILD
@@ -385,7 +385,7 @@ package() {
 		# linker finds the libs from relocated sysroot
 		for so in "$pkgdir"/usr/"$CTARGET"/lib/*.so; do
 			if [ -h "$so" ]; then
-				local _real=$(basename "$(readlink \"$so\")")
+				local _real=$(basename "$(readlink "$so")")
 				rm -f "$so"
 				echo "GROUP ($_real)" > "$so"
 			fi
