testing/py3-flask-restful: upgrade to 0.3.8

--- a/testing/py3-flask-restful/APKBUILD
+++ b/testing/py3-flask-restful/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-flask-restful
 _pkgname=Flask-RESTful
-pkgver=0.3.7
-pkgrel=1
+pkgver=0.3.8
+pkgrel=0
 pkgdesc="Flask RESTful API extension"
 url="https://pypi.python.org/pypi/Flask-RESTful"
 arch="noarch"
-license="BSD"
+license="BSD-3-Clause"
 depends="python3 py3-flask"
 makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
@@ -24,4 +24,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="72ceb0c6982e7c421be8a835cdfc49c10f780c499c1e77db58a07d46e4e11c53f9c48ce9ae87416d51606794c9232c41f0148d2296647fc124dbf9124e6d8f34  Flask-RESTful-0.3.7.tar.gz"
+sha512sums="3d60feb7a8e4ab84d86d1eba5328bfc0034c4369d4e049c98ffe8bb1e26166bbc4b5f3fb994930b336d13dd8a02d2149c3a8e0d3f12afdb60765b571e47dfbfd  Flask-RESTful-0.3.8.tar.gz"
