testing/crun: upgrade to 0.12.1

--- a/testing/crun/APKBUILD
+++ b/testing/crun/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: kohnish <kohnish@gmx.com>
 # Maintainer: kohnish <kohnish@gmx.com>
-pkgname="crun"
-pkgver="0.12"
+pkgname=crun
+pkgver=0.12.1
 pkgrel=0
 pkgdesc="Command line utility that performs various operations on container images and image repositories"
 url="https://github.com/containers/crun"
@@ -24,4 +24,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="849ae58977f47268f5723a5d2fd1a69c82f63b809cf258c137ff7d23cc18eda85477f2ffebaa2f181005bc4364eea4c86819596a2de26bed3de4e107eb565c79  crun-0.12.tar.xz"
+sha512sums="9308fe58382bdd399047488a806c1e5dfed187ab213714a970540658db483417323dddf8fd09592f8f9508177933a7da4f237471dc9ea1d445c22f876def3dc9  crun-0.12.1.tar.xz"
