testing/py3-pandas: upgrade to 1.0.1

--- a/testing/py3-pandas/APKBUILD
+++ b/testing/py3-pandas/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Carlos Giraldo <cgiraldo@gradiant.org>
 pkgname=py3-pandas
 _pkgname=pandas
-pkgver=0.25.3
-pkgrel=1
+pkgver=1.0.1
+pkgrel=0
 pkgdesc="Powerful data structures for data analysis, time series, and statistics"
-url="http://pandas.pydata.org/"
+url="https://pandas.pydata.org/"
 arch="all"
 license="BSD-3-Clause"
 depends="py3-dateutil py3-numpy py3-tz"
-makedepends="linux-headers py3-numpy-dev python3-dev py3-setuptools"
+makedepends="linux-headers py3-numpy-dev python3-dev py3-setuptools cython"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -24,4 +24,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="ab282e4d3145daafa68d5e3a2e82d692385eb62720d6503ddb3a4f76cf380591cbd32ba3e15fa5ba93725a221d3f74062012ca13a0df8e08c324e706ca35ccf6  pandas-0.25.3.tar.gz"
+sha512sums="6755d17a4a4a8c3770f413199a12b3c4d6b5f5fcc925bec9b9b0f813fcd020df0b2c0a32dc8528c795b16556e00c078a03e4a6746192b44bfbd7ffc809c1e56c  pandas-1.0.1.tar.gz"
