testing/py3-responses: upgrade to 0.10.10

--- a/testing/py3-responses/APKBUILD
+++ b/testing/py3-responses/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer:
 pkgname=py3-responses
 _pkgname=responses
-pkgver=0.10.9
+pkgver=0.10.10
 pkgrel=0
 pkgdesc="Utility library for mocking out the requests Python library"
 url="https://pypi.python.org/pypi/responses/"
@@ -11,7 +11,7 @@ depends="py3-requests py3-six"
 makedepends="py3-setuptools"
 checkdepends="py3-flake8 py3-pytest py3-pytest-cov py3-pytest-localserver
 	py3-werkzeug"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/getsentry/responses/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 replaces=py-responses # Backwards compatibility
@@ -29,4 +29,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="3499d69d97061cc35041319aa1b9ecf48c296815f2db3f64cecc1ca66b5db61a4c85f93c9e26dc24451ccb53ce165a9d7b7013ca009005058013001c46cd8e9e  responses-0.10.9.tar.gz"
+sha512sums="7a33529741e211ddf204543cd3490b8502fe8eb3d26f0b5956ce02d6a0e0273697d65d5eacf85ef7fc6470239daeb66a949e1c5200446792d8b8d24a31c88025  py3-responses-0.10.10.tar.gz"
