testing/rclone: upgrade to 1.51.0
- move GO111MODULE setting to the global scope (go modules are now stable)
- disable some tests:
    - the first set run the docker command during them to set up an
      integration environment
    - the second set fails in docker for me, but not when ran outside of
      it
- stop setting a custom cmd location, there's no need to do that

--- a/testing/rclone/APKBUILD
+++ b/testing/rclone/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Chloe Kudryavtsev <toast@toastin.space>
 pkgname=rclone
-pkgver=1.50.2
+pkgver=1.51.0
 pkgrel=0
 pkgdesc="Rsync for cloud storage"
 url="https://rclone.org/"
@@ -11,22 +11,31 @@ options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ncw/$pkgname/archive/v$pkgver.tar.gz"
 subpackages="$pkgname-doc"
 
+export GO111MODULE=on
 export GOPATH="$srcdir"
 export CGO_ENABLED=0
 
 build() {
-	GO111MODULE=on go build -o bin/"$pkgname"
+	go build
 }
 
 check() {
+	# backend/{ftp,sftp,swift,webdav}: uses docker(1) for tests
+	# backend/{local,memory}: fails in docker envs, but not on real machines
 	# fs/rc: fails on ppc64le
-	GO111MODULE=on go test $(go list ./... | grep -v \
+	go test $(go list ./... | grep -v \
+		-e 'backend/ftp$' \
+		-e 'backend/local$' \
+		-e 'backend/memory$' \
+		-e 'backend/sftp$' \
+		-e 'backend/swift$' \
+		-e 'backend/webdav$' \
 		-e 'fs/rc$'
 		)
 }
 
 package() {
-	install -Dm755 "$builddir"/bin/"$pkgname" \
+	install -Dm755 "$builddir"/"$pkgname" \
 		"$pkgdir"/usr/bin/"$pkgname"
 
 	install -Dm644 "$builddir"/"$pkgname".1 \
@@ -38,4 +47,4 @@ cleanup_srcdir() {
 	default_cleanup_srcdir
 }
 
-sha512sums="30c0088f521132522a5813cf8eb3bdf704c2fefe391ecde3abd3f94969864d7872f095f0f431018b08bdc07f2e867d164311930c5fb51c06bc9581e9067205b2  rclone-1.50.2.tar.gz"
+sha512sums="b0881e09b75093abe4d31e95425a90513aed4a16d9e2dbf79023c9dc68875b90a1332204879530c450a16ab9cac475d967f7657d6f810a1e0f0d84b88d7de916  rclone-1.51.0.tar.gz"
