--- a/main/libgpg-error/APKBUILD
+++ b/main/libgpg-error/APKBUILD
@@ -3,16 +3,15 @@
 # Contributor: Arto Kitula <arto.kitula@gmail.com>
 
 pkgname=libgpg-error
-pkgver=1.36
-pkgrel=2
+pkgver=1.37
+pkgrel=0
 pkgdesc="Support library for libgcrypt"
 url="http://www.gnupg.org"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.1-or-later"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-lisp:lisp:noarch"
 makedepends="automake autoconf"
-source="https://gnupg.org/ftp/gcrypt/$pkgname/$pkgname-$pkgver.tar.bz2
-	gawk5.patch"
+source="https://gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-$pkgver.tar.bz2"
 
 prepare() {
 	default_prepare
@@ -20,8 +19,7 @@ prepare() {
 	automake
 }
 
-build () {
-	cd "$builddir"
+build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,7 +37,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 }
 
@@ -54,5 +51,4 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib/
 }
 
-sha512sums="6e5f853f77dc04f0091d94b224cab8e669042450f271b78d0ea0219658d059c9cab1ab0eaa020a4227f451520b417fc340b85971a6f5e144fa69be57e15df346  libgpg-error-1.36.tar.bz2
-02b4f4b7b7e7c1e8abc50da7667ef7da12180aef632fb5314e5e994cfbd54dd153f1b5e5162dcba923af9cca379a6613dbd73d2e3777024e683153fe142cec26  gawk5.patch"
+sha512sums="fa12977237fcc872e944cda39ca43ee7d2cc9c52e243ede6077f4a31ae135e322dc848b4b55cffdc4ec53f27601ba30ddb368b090a94cd00d9345a55b323f179  libgpg-error-1.37.tar.bz2"
