community/postfixadmin: upgrade to 3.2.3

--- a/community/postfixadmin/APKBUILD
+++ b/community/postfixadmin/APKBUILD
@@ -3,15 +3,15 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 _php=php7
 pkgname=postfixadmin
-pkgver=3.2.2
+pkgver=3.2.3
 pkgrel=0
 pkgdesc="Web Based Management tool for Postfix"
 url="http://postfixadmin.com/"
 arch="noarch"
-license="GPL"
+license="GPL-2.0-or-later"
 depends="$_php"
 options="!check"
-source="https://github.com/postfixadmin/$pkgname/archive/postfixadmin-$pkgver.tar.gz"
+source="https://github.com/postfixadmin/postfixadmin/archive/postfixadmin-$pkgver.tar.gz"
 
 # secfixes:
 #   3.0.2-r0:
@@ -19,12 +19,7 @@ source="https://github.com/postfixadmin/$pkgname/archive/postfixadmin-$pkgver.ta
 
 builddir="$srcdir/$pkgname-$pkgname-$pkgver"
 
-build() {
-	cd "$builddir"
-}
-
 package() {
-	cd "$builddir"
 	mkdir -p "$pkgdir"/usr/share/webapps/postfixadmin \
 		"$pkgdir"/etc/postfixadmin
 	cp -r * "$pkgdir"/usr/share/webapps/postfixadmin/
@@ -38,4 +33,4 @@ package() {
 		> "$pkgdir"/usr/share/webapps/postfixadmin/robots.txt
 }
 
-sha512sums="6c84cb215e69c52c26db0651e5d0d9d8bcb0a63b00d3c197f10fa1f0442a1fde44bb514fb476a1e68a21741d603febac67282961d01270e5969ee13d145121ee  postfixadmin-3.2.2.tar.gz"
+sha512sums="d44addb9a3ca830caf55b603363054df561d659957f21cab7523465ebf02ca18abe7fcf298fe718d957d0b7bf5613e2dde69c78c26e0f7f6f595d79b28fe08ab  postfixadmin-3.2.3.tar.gz"
