community/folks: upgrade to 0.13.2

--- a/community/folks/APKBUILD
+++ b/community/folks/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=folks
-pkgver=0.13.1
-pkgrel=2
+pkgver=0.13.2
+pkgrel=0
 pkgdesc="GObject Library to aggregate people into metacontacts"
 url="https://wiki.gnome.org/Projects/Folks"
 arch="all"
@@ -17,11 +17,12 @@ makedepends="
 	tracker-dev
 	vala
 	python3
+	py3-dbusmock
+	gtk-doc
 	readline-dev"
 options="!check" # Can only be run against installed instance
-subpackages="$pkgname-dev $pkgname-lang"
-source="https://download.gnome.org/sources/folks/${pkgver%.*}/folks-$pkgver.tar.xz
-	78b24b8cb01e27e352de2aca93934833bcb412b8.patch"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+source="https://download.gnome.org/sources/folks/${pkgver%.*}/folks-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -43,5 +44,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="b134172077bed1655cd7f24b1402ed347d405b22114c33d6638040a5e475632ea33cde898a08fc143eaefc7057d4b6dccceac7e797e1976fdf88c58764818afe  folks-0.13.1.tar.xz
-fefda76211b459c0a3ca3a6760eee053884b1d2adf225d7c05334175bf74c56509e74c7876d1a02ee1f53c86671ddf1eb1850ac937cb29ae706a391490f520c6  78b24b8cb01e27e352de2aca93934833bcb412b8.patch"
+sha512sums="a6d5febd492a482fe7923668a694864eb0203a9841b810bb7d5d69e491f3721505f9c717de38b4a9a44604b6a3373d5a482cd254959ed95ab23b55775022d707  folks-0.13.2.tar.xz"
