main/openresolv: upgrade to 3.10.0

--- a/main/openresolv/APKBUILD
+++ b/main/openresolv/APKBUILD
@@ -1,18 +1,15 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openresolv
-pkgver=3.9.2
+pkgver=3.10.0
 pkgrel=0
 pkgdesc="A framework for managing DNS information"
 url="https://roy.marples.name/projects/openresolv"
 arch="noarch"
 license="BSD"
-depends=""
 subpackages="$pkgname-doc"
 source="http://roy.marples.name/downloads/openresolv/openresolv-$pkgver.tar.xz"
 
-_builddir="$srcdir"/$pkgname-$pkgver
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,8 +20,7 @@ build() {
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2f88ccbb53c6e830eeb7dd53666ee72b9fa30f38324766e1d1734896bc9b7f531e42e234c882b921c79604a3bde2877db2681bab9dd8c590f02779da908d0649  openresolv-3.9.2.tar.xz"
+sha512sums="f28fc43887f18f6cbdcdabbb48777fc704ed653e77f34caf349b5c4e5f5f6e7686242ea9f2617f2f65d40d14c794ce28cffee0ec5e5c7b8a19566f3bd72e9ec5  openresolv-3.10.0.tar.xz"
