--- a/main/lttng-ust/APKBUILD
+++ b/main/lttng-ust/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Michael Jeanson <mjeanson@efficios.com>
 pkgname=lttng-ust
 pkgver=2.11.0
-pkgrel=0
+pkgrel=1
 pkgdesc="LTTng 2.0 Userspace Tracer"
 url="https://lttng.org"
 arch="all"
 license="LGPL-2.1-or-later"
+depends="python3"
 makedepends="userspace-rcu-dev>0.10 util-linux-dev linux-headers bash"
 subpackages="$pkgname-doc $pkgname-dev"
 source="https://lttng.org/files/lttng-ust/lttng-ust-$pkgver.tar.bz2"
@@ -27,6 +28,8 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	sed -i 's|^#!/usr/bin/env python$|#!/usr/bin/env python3|' "$pkgdir"/usr/bin/lttng-gen-tp
 }
 
 sha512sums="fb7258961a7e913487806a7e0129c95becff8c631382b119ff1d78f95cdd7460ec24e62671642160fdb006a3a292b2b10f35c8424f0367ce7c6a41cbcca77a09  lttng-ust-2.11.0.tar.bz2"
