main/gcc: disable cross-compiling native D-compiler
That seems to require D cross-compiler to work, which was just
disabled.

--- a/main/gcc/APKBUILD
+++ b/main/gcc/APKBUILD
@@ -80,6 +80,7 @@ elif [ "$CBUILD" != "$CHOST" ]; then
 	LANG_OBJC=false
 	LANG_GO=false
 	LANG_FORTRAN=false
+	LANG_D=false
 
 	STRIP_FOR_TARGET=${CROSS_COMPILE}strip
 	_builddir="$srcdir/build-cross-native"
