--- a/testing/broot/APKBUILD
+++ b/testing/broot/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.13.0
 pkgrel=0
 pkgdesc="New way to see and navigate directory trees"
 url="https://github.com/Canop/broot"
-arch="all !s390x"
+arch="all !s390x !x86"
 license="MIT"
 makedepends="cargo"
 source="$pkgname-$pkgver.tar.gz::https://crates.io/api/v1/crates/broot/$pkgver/download"
