--- a/community/rust/APKBUILD
+++ b/community/rust/APKBUILD
@@ -7,7 +7,7 @@ pkgname=rust
 pkgver=1.41.0
 _llvmver=9
 _bootver=1.40.0
-pkgrel=0
+pkgrel=1
 pkgdesc="The Rust Programming Language"
 url="https://www.rust-lang.org"
 arch="x86_64 armv7 armhf aarch64 x86 ppc64le"
@@ -66,6 +66,7 @@ source="https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.gz
 	musl-fix-linux_musl_base.patch
 	static-pie.patch
 	need-rpath.patch
+	need-ssp_nonshared.patch
 	minimize-rpath.patch
 	alpine-move-py-scripts-to-share.patch
 	alpine-target.patch
@@ -311,6 +312,7 @@ sha512sums="fb794b8d8527170add7229b136c9d96b94d0c8bae195b9db55e7e0fec41661f0e22a
 41fd9e8a8dd99074d95d664e65f92dba644b8ef9fa37b9a1d781a01fe49eaa254c430f0f277622dc4f8203aad2d129a045fdf1679a0da526d549fac60654be26  musl-fix-linux_musl_base.patch
 97e81c57af93df550577f41d795185a9eb0c37528776c250076cc57f06c87e81139eb71cd6b6a4730528511821ae50c304d7deb534d6422cd08bb44193ae605d  static-pie.patch
 d4659b56dbf1218da98b995a0a89a8cfd069dd94b3e9aef4aee987484d96fc8b92f6d695ea4123eff26711961f2db2f7324bf5b4043f41722cd89581aac97f1c  need-rpath.patch
+5bb8b60fee2540bfb3df0c0759d540eb5c29f861d8ed4640768fd8f5bc28fb781e2aafe37002dfc0fb0fc4c5c50be7e35981a0814b2a175368397463d0411910  need-ssp_nonshared.patch
 e90e544d2413ae79c553bb1d82eac9b41eb2a7c7ffb7cb28dc3573418bd453c27dcc48f38ce4b8e33bb994b5481db70303c707231b7d4f7fde561bebf0838f21  minimize-rpath.patch
 35e0619672843d9dd41df4a086404a59b57c12fa014e42d06102bc3856a96ed021e716f9d581ec5c89444acbaedd3edcd2b8a85576df3bb4451c0edde3afbba5  alpine-move-py-scripts-to-share.patch
 080c3c1af15936c3795724d3cf0f60798ef470bce898e43b6757843bf56f6d46de3dd5b9ea3b116b2011b40373cf8daf17abc94cfff4bdb6221bd431aa0844fd  alpine-target.patch
