testing/broot: enable x86
943315f4c5 (community/rust: add libssp_nonshared to link spec,
2020-02-08) fixed the linking issue, so now we can build on x86 again.

Fixes #11202

--- a/testing/broot/APKBUILD
+++ b/testing/broot/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.13.0
 pkgrel=0
 pkgdesc="New way to see and navigate directory trees"
 url="https://github.com/Canop/broot"
-arch="all !s390x !x86"
+arch="all !s390x"
 license="MIT"
 makedepends="cargo"
 source="$pkgname-$pkgver.tar.gz::https://crates.io/api/v1/crates/broot/$pkgver/download"
